# cli-cbrain

./: .gitignore  README.md  cbrain  requirements.txt  setup.cfg
cbrain_cli/: __init__.py  cli.py  cli_utils.py  config.py  main.py  sessions.py  users.py  version.py
