[metadata]
name = cbrain-cli
version = 0.1.0
description = A command-line interface for CBRAIN
long_description = file: README.md
long_description_content_type = text/markdown
author = Your Name
author_email = your.email@example.com
url = https://github.com/yourusername/cbrain-cli
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.7
install_requires =
    click>=8.0.0
    requests>=2.28.0

[options.entry_points]
console_scripts =
    cbrain = cbrain_cli.cli:main 