[metadata]
name = cbrain-cli
version = 0.1.0
description = A command-line interface for CBRAIN
long_description = file: README.md
long_description_content_type = text/markdown
author = CBRAIN Team
author_email = cbrain@mcin-cnim.ca
url = https://github.com/cbrain/cbrain-cli
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.7

[options.entry_points]
console_scripts =
    cbrain = cbrain_cli.main:main 